--- a/Angular/pdsfrontend/src/app/app.component.html
+++ b/Angular/pdsfrontend/src/app/app.component.html
@@ -1,3 +1,4 @@
-
-<app-button></app-button>
-<router-outlet></router-outlet>
+<app-layout>
+  <app-button></app-button>
+  <router-outlet></router-outlet>
+</app-layout>
